<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarBottomSheet"
    android:background="@drawable/bottom_sheet_background">


    <View
        android:layout_width="375dp"
        android:layout_height="14dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/innerTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingStart="19.67dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/b_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_close"/>

        <TextView
            android:layout_width="114dp"
            android:layout_height="23dp"
            android:layout_weight="55"
            android:fontFamily="@font/vela_sans"
            android:gravity="center_horizontal|top"
            android:text="@string/choose_date"
            android:textColor="@color/white"
            android:textSize="17sp"

            android:layout_marginStart="32dp"/>

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="67dp"
            android:layout_height="22dp"
            android:layout_weight="18"
            android:text="@string/today"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfWeeksLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="34.5dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="27dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textSize="12sp"
            android:textColor="@color/light_black"
            android:fontFamily="@font/vela_sans"
            android:gravity="center"/>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_calendar"
            android:layout_width="match_parent"
            android:layout_height="501dp"
            android:layout_marginStart="28.76dp"
            android:layout_marginEnd="30.24dp"
            />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_show"
        android:backgroundTint="@color/orange"
        style="@style/show_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_margin="16dp"

        android:paddingTop="27dp"
        android:paddingBottom="27dp"

        android:text="@string/show"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>