<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstDate"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondDate"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_firstDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiting"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_lastDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiting"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"/>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_openCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/openCalendar"
        app:icon="@drawable/ic_calendar" />

</RelativeLayout>